--- a/DesctopHITE/App.xaml
+++ b/DesctopHITE/App.xaml
@@ -6,13 +6,13 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="\AppDateFolder\StyleFolder\WindowsDictionary.xaml"/>
-                <ResourceDictionary Source="\AppDateFolder\StyleFolder\BorderDictionary.xaml"/>
-                <ResourceDictionary Source="\AppDateFolder\StyleFolder\ColorDictionary.xaml"/>
-                <ResourceDictionary Source="\AppDateFolder\StyleFolder\StackPanelDictionary.xaml"/>
-                <ResourceDictionary Source="\AppDateFolder\StyleFolder\ButtonDictionary.xaml"/>
-                <ResourceDictionary Source="\AppDateFolder\StyleFolder\TextBlockDictionary.xaml"/>
-                <ResourceDictionary Source="\AppDateFolder\StyleFolder\PageDictionary.xaml"/>
+                <ResourceDictionary Source="\AppDateFolder\StyleFolder\Windows_Dictionary.xaml"/>
+                <ResourceDictionary Source="\AppDateFolder\StyleFolder\Border_Dictionary.xaml"/>
+                <ResourceDictionary Source="\AppDateFolder\StyleFolder\Color_Dictionary.xaml"/>
+                <ResourceDictionary Source="\AppDateFolder\StyleFolder\StackPanel_Dictionary.xaml"/>
+                <ResourceDictionary Source="\AppDateFolder\StyleFolder\Button_Dictionary.xaml"/>
+                <ResourceDictionary Source="\AppDateFolder\StyleFolder\TextBlock_Dictionary.xaml"/>
+                <ResourceDictionary Source="\AppDateFolder\StyleFolder\Page_Dictionary.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
