--- a/DesctopHITE/AppDateFolder/StyleFolder/Border_Dictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/Border_Dictionary.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="\AppDateFolder\StyleFolder\ColorDictionary.xaml"/>
+        <ResourceDictionary Source="\AppDateFolder\StyleFolder\Color_Dictionary.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     <Style x:Key="ControlPanel_Border-Style" TargetType="Border">
         <Setter Property="Height" Value="30"/>
