--- a/DesctopHITE/PerformanceFolder/PageFolder/AuthorizationPageFolder/ModeAuthorizationPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/AuthorizationPageFolder/ModeAuthorizationPage.xaml
@@ -5,8 +5,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     mc:Ignorable="d" 
-    Style="{DynamicResource }">
+    Style="{DynamicResource ModeAuthorization_Page-Style}">
     <Grid>
-        
+        <ToggleButton/>
     </Grid>
 </Page>
