--- a/DesctopHITE/PerformanceFolder/PageFolder/AuthorizationPageFolder/ModeAuthorizationPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/AuthorizationPageFolder/ModeAuthorizationPage.xaml
@@ -5,8 +5,20 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     mc:Ignorable="d" 
+    IsVisibleChanged="Page_IsVisibleChanged"
     Style="{DynamicResource ModeAuthorization_Page-Style}">
-    <Grid>
-        <ToggleButton/>
-    </Grid>
+    <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+        <ToggleButton
+            Margin="0 0 30 0"
+            x:Name="Kassa_ToggleButton"
+            Content="КАССА"
+            Click="Kassa_ToggleButton_Click"
+            Style="{DynamicResource ModeAuthorization_ToggleButton-Style}"/>
+        <ToggleButton
+            Margin="30 0 0 0"
+            x:Name="Customization_ToggleButton"
+            Content="НАСТРОЙКА"
+            Click="Customization_ToggleButton_Click"
+            Style="{DynamicResource ModeAuthorization_ToggleButton-Style}"/>
+    </StackPanel>
 </Page>
