--- a/DesctopHITE/AppDateFolder/StyleFolder/StackPanel_Dictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/StackPanel_Dictionary.xaml
@@ -6,4 +6,9 @@
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Right"/>
     </Style>
+    <Style x:Key="Authorization_StackPanel-Style" TargetType="StackPanel">
+        <Setter Property="Orientation" Value="Vertical"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+    </Style>
 </ResourceDictionary>
