--- a/DesctopHITE/AppDateFolder/StyleFolder/Border_Dictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/Border_Dictionary.xaml
@@ -1,24 +1,21 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="\AppDateFolder\StyleFolder\Color_Dictionary.xaml"/>
-    </ResourceDictionary.MergedDictionaries>
     <Style x:Key="Main_Border-Style" TargetType="Border">
         <Setter Property="Background">
             <Setter.Value>
                 <LinearGradientBrush StartPoint="0,1" EndPoint="1,0">
-                    <GradientStop Color="{DynamicResource Color001}" Offset="1"/>
-                    <GradientStop Color="{DynamicResource Color002}" Offset="1"/>
+                    <GradientStop Color="#060531" Offset="0"/>
+                    <GradientStop Color="#1B1448" Offset="1"/>
                 </LinearGradientBrush>
             </Setter.Value>
         </Setter>
         <Setter Property="BorderBrush">
             <Setter.Value>
                 <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-                    <GradientStop Color="{DynamicResource Color003}" Offset="0"/>
-                    <GradientStop Color="{DynamicResource Color004}" Offset="0.75"/>
-                    <GradientStop Color="{DynamicResource Color005}" Offset="1"/>
+                    <GradientStop Color="#462AD8" Offset="0"/>
+                    <GradientStop Color="#DA34AE" Offset="0.75"/>
+                    <GradientStop Color="#8A16C1" Offset="1"/>
                 </LinearGradientBrush>
             </Setter.Value>
         </Setter>
