--- a/DesctopHITE/App.xaml
+++ b/DesctopHITE/App.xaml
@@ -14,6 +14,7 @@
                 <ResourceDictionary Source="\AppDateFolder\StyleFolder\Page_Dictionary.xaml"/>
                 <ResourceDictionary Source="\AppDateFolder\StyleFolder\ToggleButton_Dictionary.xaml"/>
                 <ResourceDictionary Source="\AppDateFolder\StyleFolder\TextBox_Dictionary.xaml"/>
+                <ResourceDictionary Source="\AppDateFolder\StyleFolder\PasswordBox_Dictionary.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
