--- a/DesctopHITE/AppDateFolder/StyleFolder/Border_Dictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/Border_Dictionary.xaml
@@ -22,4 +22,11 @@
         <Setter Property="BorderThickness" Value="2"/>
         <Setter Property="CornerRadius" Value="10"/>
     </Style>
+    <Style x:Key="Shadow_Border-Style" TargetType="Border">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="BorderBrush" Value="#000"/>
+        <Setter Property="BorderThickness" Value="0 0 0 2"/>
+        <Setter Property="Height" Value="40"/>
+        <Setter Property="CornerRadius" Value="0"/>
+    </Style>
 </ResourceDictionary>
