--- a/DesctopHITE/AppDateFolder/StyleFolder/PasswordBox_Dictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/PasswordBox_Dictionary.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="Main_TextBox-Style" TargetType="TextBox">
+    <Style x:Key="Main_PasswordBox-Style" TargetType="PasswordBox">
         <Setter Property="Foreground" Value="#FFFFFF"/>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="CaretBrush" Value="#ffffff"/>
@@ -27,7 +27,7 @@
         <Setter Property="HorizontalContentAlignment" Value="Left"/>
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type TextBox}">
+                <ControlTemplate TargetType="{x:Type PasswordBox}">
                     <Border 
                         x:Name="border"
                         CornerRadius="0"
