--- a/DesctopHITE/AppDateFolder/StyleFolder/TextBlock_Dictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/TextBlock_Dictionary.xaml
@@ -4,9 +4,31 @@
     <Style x:Key="ControlPanel_TextBlock-Style" TargetType="TextBlock">
         <Setter Property="Foreground" Value="#ffffff"/>
         <Setter Property="FontFamily" Value="Consolas"/>
-        <Setter Property="FontSize" Value="18"/>
+        <Setter Property="FontSize" Value="15"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Left"/>
         <Setter Property="Margin" Value="10 0 0 0"/>
+    </Style>
+    <Style x:Key="Icon_TextBlock-Style" TargetType="TextBlock">
+        <Setter Property="Foreground" Value="#ffffff"/>
+        <Setter Property="FontFamily" Value="\ContentFolder\FontFolder\#Segoe MDL2 Assets"/>
+        <Setter Property="FontSize" Value="20"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="IsHitTestVisible" Value="False"/>
+        <Setter Property="Margin" Value="10 0 0 0"/>
+    </Style>
+    <Style x:Key="Hint_TextBlock-Style" TargetType="TextBlock">
+        <Setter Property="Foreground" Value="#8c8a8c"/>
+        <Setter Property="FontFamily" Value="Consolas"/>
+        <Setter Property="TextWrapping" Value="Wrap"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="12 0 0 0"/>
+        <Setter Property="FontSize" Value="13"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="IsHitTestVisible" Value="False"/>
     </Style>
 </ResourceDictionary>
