--- a/DesctopHITE/AppDateFolder/StyleFolder/BorderDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/BorderDictionary.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="Main_Border-Style" TargetType="Border">
+    <Style x:Key="MainBorderStyle" TargetType="Border">
         <Setter Property="Background">
             <Setter.Value>
                 <LinearGradientBrush StartPoint="0,1" EndPoint="1,0">
@@ -21,12 +21,5 @@
         </Setter>
         <Setter Property="BorderThickness" Value="2"/>
         <Setter Property="CornerRadius" Value="10"/>
-    </Style>
-    <Style x:Key="Shadow_Border-Style" TargetType="Border">
-        <Setter Property="Background" Value="Transparent"/>
-        <Setter Property="BorderBrush" Value="#000"/>
-        <Setter Property="BorderThickness" Value="0 0 0 2"/>
-        <Setter Property="Height" Value="40"/>
-        <Setter Property="CornerRadius" Value="0"/>
     </Style>
 </ResourceDictionary>
