--- a/DesctopHITE/AppDateFolder/StyleFolder/PageDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/PageDictionary.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <!--#region AuthorizationPage-->
-    <Style x:Key="Authorization_Page-Style" TargetType="Page">
+    <Style x:Key="AuthorizationPageStyle" TargetType="Page">
         <Setter Property="Width" Value="796"/>
         <Setter Property="Height" Value="416"/>
     </Style>
