--- a/DesctopHITE/AppDateFolder/StyleFolder/WindowsDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/WindowsDictionary.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="Authorization-Style" TargetType="Window">
+    <Style x:Key="AuthorizationStyle" TargetType="Window">
         <Setter Property="WindowStyle" Value="None"/>
         <!--<Setter Property="Icon" Value="\ContentFolder\ImageFolder\MiIcon.png"/>-->
         <Setter Property="ResizeMode" Value="CanMinimize"/>
