Поменял дизайн, надеюсь окончательно

--- a/DesctopHITE/AppDateFolder/StyleFolder/PasswordBoxDictionary.xaml
+++ b/DesctopHITE/AppDateFolder/StyleFolder/PasswordBoxDictionary.xaml
@@ -3,19 +3,10 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="MainPasswordBoxStyle" TargetType="PasswordBox">
         <Setter Property="Foreground" Value="#FFFFFF"/>
-        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="Background" Value="#202020"/>
         <Setter Property="CaretBrush" Value="#ffffff"/>
-        <Setter Property="Opacity" Value="0.6"/>
-        <Setter Property="BorderBrush">
-            <Setter.Value>
-                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-                    <GradientStop Color="#462AD8" Offset="1"/>
-                    <GradientStop Color="#DA34AE" Offset="0.75"/>
-                    <GradientStop Color="#8A16C1" Offset="0"/>
-                </LinearGradientBrush>
-            </Setter.Value>
-        </Setter>
-        <Setter Property="BorderThickness" Value="0,0,0,2"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="Padding" Value="5 0 5 0"/>
@@ -30,7 +21,7 @@
                 <ControlTemplate TargetType="{x:Type PasswordBox}">
                     <Border 
                         x:Name="border"
-                        CornerRadius="0"
+                        CornerRadius="10"
                         BorderBrush="{TemplateBinding BorderBrush}"
                         Background="{TemplateBinding Background}"
                         BorderThickness="{TemplateBinding BorderThickness}">
@@ -42,13 +33,13 @@
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Opacity" Value="0.8"/>
+                            <Setter Property="Cursor" Value="IBeam"/>
                         </Trigger>
                         <Trigger Property="IsFocused" Value="true">
-                            <Setter Property="Opacity" Value="1"/>
+                            <Setter Property="Background" Value="#2a2a2a"/>
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="False">
-                            <Setter Property="Opacity" Value="0.3"/>
+                            <Setter Property="Opacity" Value="0.5"/>
                             <Setter Property="Cursor" Value="Hand"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
