--- a/DesctopHITE/App.xaml
+++ b/DesctopHITE/App.xaml
@@ -15,6 +15,7 @@
                 <ResourceDictionary Source="\AppDateFolder\StyleFolder\ToggleButtonDictionary.xaml"/>
                 <ResourceDictionary Source="\AppDateFolder\StyleFolder\TextBoxDictionary.xaml"/>
                 <ResourceDictionary Source="\AppDateFolder\StyleFolder\PasswordBoxDictionary.xaml"/>
+                <ResourceDictionary Source="\AppDateFolder\StyleFolder\ColorDictionary.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
