--- a/DesctopHITE/PerformanceFolder/PageFolder/AuthorizationPageFolder/CustomizationPage.xaml
+++ b/DesctopHITE/PerformanceFolder/PageFolder/AuthorizationPageFolder/CustomizationPage.xaml
@@ -16,6 +16,17 @@
                 Height="150"
                 Width="150"/>
             <Grid Margin="0 10 0 10">
+                <Border Style="{DynamicResource ShadowBorder}">
+                    <Border.Effect>
+                        <DropShadowEffect 
+                            Direction="-90"
+                            Color="{DynamicResource ShadowColor}"
+                            BlurRadius="5"
+                            ShadowDepth="0.5"
+                            Opacity="0.5"
+                            RenderingBias="Performance"/>
+                    </Border.Effect>
+                </Border>
                 <TextBox
                     Padding="39 0 0 0"
                     Width="600"
@@ -30,6 +41,17 @@
                     Style="{DynamicResource HintTextBlockStyle}"/>
             </Grid>
             <Grid Margin="0 10 0 25">
+                <Border Style="{DynamicResource ShadowBorder}">
+                    <Border.Effect>
+                        <DropShadowEffect 
+                            Direction="-90"
+                            Color="{DynamicResource ShadowColor}"
+                            BlurRadius="5"
+                            ShadowDepth="0.5"
+                            Opacity="0.5"
+                            RenderingBias="Performance"/>
+                    </Border.Effect>
+                </Border>
                 <Grid x:Name="PasswordPasswordGrid">
                     <PasswordBox
                         Padding="39 0 0 0"
@@ -45,6 +67,17 @@
                         Style="{DynamicResource HintTextBlockStyle}"/>
                 </Grid>
                 <Grid Visibility="Collapsed" x:Name="TextPasswordGrid">
+                    <Border Style="{DynamicResource ShadowBorder}">
+                        <Border.Effect>
+                            <DropShadowEffect 
+                            Direction="-90"
+                            Color="{DynamicResource ShadowColor}"
+                            BlurRadius="5"
+                            ShadowDepth="0.5"
+                            Opacity="0.5"
+                            RenderingBias="Performance"/>
+                        </Border.Effect>
+                    </Border>
                     <TextBox
                         Padding="39 0 40 0"
                         Width="600"
@@ -66,13 +99,28 @@
                     Margin="0 5 10 0"
                     Style="{StaticResource PasswordButtonStyle}"/>
             </Grid>
-            <Button
-                x:Name="Login_Button"
-                Click="Login_Button_Click"
-                Content="ВОЙТИ"
-                Margin="0 25 0 0"
-                Width="220"
-                Height="50"/>
+            <Grid Margin="0 25 0 0">
+                <Border
+                    Width="220"
+                    Height="50" 
+                    Style="{DynamicResource ShadowBorder}">
+                    <Border.Effect>
+                        <DropShadowEffect 
+                            Direction="-90"
+                            Color="{DynamicResource ShadowColor}"
+                            BlurRadius="5"
+                            ShadowDepth="0.5"
+                            Opacity="0.5"
+                            RenderingBias="Performance"/>
+                    </Border.Effect>
+                </Border>
+                <Button
+                    x:Name="Login_Button"
+                    Click="Login_Button_Click"
+                    Content="ВОЙТИ"
+                    Width="220"
+                    Height="50"/>
+            </Grid>
         </StackPanel>
     </Grid>
 </Page>
